<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jaykang.androidlabs.LoginActivity"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginText" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:hint="login name"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwardText" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button2"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:text="@string/go" />


</LinearLayout>
