<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jaykang.androidlabs.WeatherForecast1">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/weather_img"
            android:layout_width="200dp"
            android:layout_height="200dp" />
        <TextView
            android:id="@+id/weather_txtCurrTem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currTem"/>
        <TextView
            android:id="@+id/weather_txtMinTem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minTem"/>
        <TextView
            android:id="@+id/weather_txtMaxTem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maxTem"/>
        <ProgressBar
            android:id="@+id/progress_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleHorizontal"
            android:visibility="invisible"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
