<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <ImageView
        android:id="@+id/weather_img"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_width="200dp"
        android:layout_height="200dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weather_img"
        android:layout_alignParentRight="false"
        android:layout_marginLeft="10dip"
        android:text="@string/currTem"/>
    <TextView
        android:id="@+id/weather_txtCurrTem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weather_img"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dip"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weather_txtCurrTem"
        android:layout_alignParentRight="false"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="10dip"
        android:text="@string/minTem"/>

    <TextView
        android:id="@+id/weather_txtMinTem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weather_txtCurrTem"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dip"
        android:layout_marginRight="50dip"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weather_txtMinTem"
        android:layout_alignParentRight="false"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="10dip"
        android:text="@string/maxTem"/>

    <TextView
        android:id="@+id/weather_txtMaxTem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weather_txtMinTem"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dip"
        android:layout_marginRight="50dip"/>
    <ProgressBar
        android:id="@+id/progress_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:layout_below="@id/weather_txtMaxTem"
        style="?android:attr/progressBarStyleHorizontal"
        android:visibility="invisible"/>
</RelativeLayout>
    <!--
    </LinearLayout>
    -->
